# middle-python-project-83

./: README.md  build.sh  pyproject.toml  ruff.toml
page_analyzer/: app.py
page_analyzer/index/: __init__.py  index.py
page_analyzer/templates/common/: common_template.html  footer.html  head.html  header.html
page_analyzer/templates/index/: index.html
